# RAG-learning

./: .gitignore  README.md  pyproject.toml
01_basics/: main.py
01_basics/utils/: __init__.py  dataset_utils.py  math_utils.py
02_qdrant/: qdrant_based_rag.py  qtest.ipynb
02_qdrant/data/: data.json
03_summarization/: summarization_aided_rag.py
03_summarization/data/: __init__.py  prompt_template.py
04_hybrid_search/: hybrid_search.py
